force-app/main/default/objects/TravelApproval__c/TravelApproval__c.object-meta.xml
<CustomObject>
    <description>PacPoint-AC120419 - Created for DCCA Travel Approval phase 1</description>
    <label>Travel Approval</label>
    <nameField>
        <displayFormat>TA - {000000}</displayFormat>
        <label>Travel Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Approvals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>