force-app/main/default/objects/TravelApproval__c/fields/AdvancedByStateWarrant__c.field-meta.xml
<CustomField>
    <fullName>AdvancedByStateWarrant__c</fullName>
    <description>PacPoint-AC121019 - Created for DCCA Travel Approval phase 1</description>
    <label>Advanced by State Warrant (DEDUCT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>