force-app/main/default/objects/TravelApproval__c/fields/Air_Lodging_M_IE_and_Reimbursable_Exp__c.field-meta.xml
<CustomField>
    <fullName>Air_Lodging_M_IE_and_Reimbursable_Exp__c</fullName>
    <label>Air, Lodging, M&amp;IE, Reimbursable Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>