force-app/main/default/objects/TravelApproval__c/fields/AmendedDateTAF__c.field-meta.xml
<CustomField>
    <fullName>AmendedDateTAF__c</fullName>
    <description>PacPoint-AC121619 - Created for DCCA Travel Approval phase 1</description>
    <inlineHelpText>MM/DD/YYYY</inlineHelpText>
    <label>Amended Date</label>
    <type>Date</type>
</CustomField>