force-app/main/default/objects/TravelApproval__c/fields/AmendedTAF__c.field-meta.xml
<CustomField>
    <fullName>AmendedTAF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-AC121619 - Created for DCCA Travel Approval phase 1</description>
    <label>Amended</label>
    <type>Checkbox</type>
</CustomField>