force-app/main/default/objects/TravelApproval__c/fields/APDAmount__c.field-meta.xml
<CustomField>
    <fullName>APDAmount__c</fullName>
    <description>PacPoint 09162021 DN - Created for case 16729</description>
    <label>APD Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>