force-app/main/default/objects/TravelApproval__c/fields/APDDateTravelBegins__c.field-meta.xml
<CustomField>
    <fullName>APDDateTravelBegins__c</fullName>
    <description>PacPoint 09162021 DN - Created for case 16729</description>
    <label>APD Date Travel Begins</label>
    <type>Date</type>
</CustomField>