force-app/main/default/objects/TravelApproval__c/fields/APDDateTravelEnds__c.field-meta.xml
<CustomField>
    <fullName>APDDateTravelEnds__c</fullName>
    <description>PacPoint 09162021 DN - Created for case 16729</description>
    <label>APD Date Travel Ends</label>
    <type>Date</type>
</CustomField>