force-app/main/default/objects/TravelApproval__c/fields/APDTotalDays__c.field-meta.xml
<CustomField>
    <fullName>APDTotalDays__c</fullName>
    <description>PacPoint DN 09072021 - Created for Case 16643</description>
    <label>APD Total Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>