force-app/main/default/objects/TravelApproval__c/fields/AppropriationSymbol__c.field-meta.xml
<CustomField>
    <fullName>AppropriationSymbol__c</fullName>
    <description>PacPoint-AC121019 - Created for DCCA Travel Approval phase 1</description>
    <label>Appropriation Symbol</label>
    <length>80</length>
    <type>Text</type>
</CustomField>