force-app/main/default/objects/TravelApproval__c/fields/ApprovedMemo__c.field-meta.xml
<CustomField>
    <fullName>ApprovedMemo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-AC121219 - Created for DCCA Travel Approval phase 1</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>