force-app/main/default/objects/TravelApproval__c/fields/ApprovingAuthorityName__c.field-meta.xml
<CustomField>
    <fullName>ApprovingAuthorityName__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <label>Approving Authority Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>