force-app/main/default/objects/TravelApproval__c/fields/ApprovingAuthoritySignature__c.field-meta.xml
<CustomField>
    <fullName>ApprovingAuthoritySignature__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <label>Approving Authority Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>