force-app/main/default/objects/TravelApproval__c/fields/ApprovingAuthoritySignedDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovingAuthoritySignedDate__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <inlineHelpText>MM/DD/YYYY</inlineHelpText>
    <label>Approving Authority Signed Date</label>
    <type>Date</type>
</CustomField>