force-app/main/default/objects/TravelApproval__c/fields/ApprovingAuthorityTitle__c.field-meta.xml
<CustomField>
    <fullName>ApprovingAuthorityTitle__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <label>Approving Authority Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deputy Director</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Governor</fullName>
            </value>
            <value>
                <fullName>PUC Chair</fullName>
            </value>
            <value>
                <fullName>PUC Executive Officer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>