force-app/main/default/objects/TravelApproval__c/fields/ApprovingOfficialName__c.field-meta.xml
<CustomField>
    <fullName>ApprovingOfficialName__c</fullName>
    <description>PacPoint-AC121019 - Created for DCCA Travel Approval phase 1</description>
    <label>Approving Official Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>