force-app/main/default/objects/TravelApproval__c/fields/AuthorizedBusiness__c.field-meta.xml
<CustomField>
    <fullName>AuthorizedBusiness__c</fullName>
    <description>PacPoint-AC121019 - Created for DCCA Travel Approval phase 1</description>
    <inlineHelpText>Number of days.</inlineHelpText>
    <label>Authorized Business</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>