force-app/main/default/objects/TravelApproval__c/fields/BaggageFee__c.field-meta.xml
<CustomField>
    <fullName>BaggageFee__c</fullName>
    <description>PacPoint-AC121019 - Created for DCCA Travel Approval phase 1</description>
    <label>Baggage Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>