force-app/main/default/objects/TravelApproval__c/fields/BeginCity__c.field-meta.xml
<CustomField>
    <fullName>BeginCity__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <label>Begin City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>