force-app/main/default/objects/TravelApproval__c/fields/BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <label>Billing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>