force-app/main/default/objects/TravelApproval__c/fields/Breakfast_Days__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_Days__c</fullName>
    <inlineHelpText>Number of Breakfast days.</inlineHelpText>
    <label>Breakfast Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>