force-app/main/default/objects/TravelApproval__c/fields/Breakfast_DaysDEDUCT__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_DaysDEDUCT__c</fullName>
    <inlineHelpText>Number of Breakfast Days to deduct</inlineHelpText>
    <label>Breakfast Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>