force-app/main/default/objects/TravelApproval__c/fields/Breakfast_Rate_DEDUCT__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_Rate_DEDUCT__c</fullName>
    <inlineHelpText>Breakfast rate from CONUS M&amp;IE</inlineHelpText>
    <label>Breakfast Rate to Deduct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>