force-app/main/default/objects/TravelApproval__c/fields/Breakfast_Rate_OCONUS__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_Rate_OCONUS__c</fullName>
    <formula>ROUND(Local_Meals_Rate_OCONUS__c * 0.2, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Local Meals Rate X 20%</inlineHelpText>
    <label>Breakfast Rate OCONUS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>