force-app/main/default/objects/TravelApproval__c/fields/Breakfast_Total_to_be_provided__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_Total_to_be_provided__c</fullName>
    <formula>Breakfast_Rate__c *  Breakfast_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Breakfast Total Free Lodging</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>