force-app/main/default/objects/TravelApproval__c/fields/Breakfast_Total_to_DEDUCT__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_Total_to_DEDUCT__c</fullName>
    <formula>Breakfast_Rate_OCONUS__c *  No_of_Days_DEDUCT_Breakfast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Breakfast Amount to deduct when meals provided at no cost.</inlineHelpText>
    <label>Breakfast Total to DEDUCT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>