force-app/main/default/objects/TravelApproval__c/fields/Breakfast_Total_When_Lodging_is_Provided__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_Total_When_Lodging_is_Provided__c</fullName>
    <formula>Breakfast_Rate_OCONUS__c *  No_of_Days_Breakfast_When_Lodging_is_Pr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Breakfast Amount When Lodging is Provided</inlineHelpText>
    <label>Breakfast Total When Lodging is Provided</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>