force-app/main/default/objects/TravelApproval__c/fields/Breakfast_TotalDEDUCT__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_TotalDEDUCT__c</fullName>
    <formula>Breakfast_Rate_DEDUCT__c *  Breakfast_DaysDEDUCT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Breakfast Meals Amount to deduct.</inlineHelpText>
    <label>Breakfast Total to Deduct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>