force-app/main/default/objects/TravelApproval__c/fields/BreakfastDollarAmountPerMeal__c.field-meta.xml
<CustomField>
    <fullName>BreakfastDollarAmountPerMeal__c</fullName>
    <description>PacPoint-AC121019 - Created for DCCA Travel Approval phase 1</description>
    <inlineHelpText>Round to nearest whole dollar (1 day per diem x meal %)</inlineHelpText>
    <label>Breakfast Dollar Amount Per Meal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>