force-app/main/default/objects/TravelApproval__c/fields/BreakfastPerDiemAllowance__c.field-meta.xml
<CustomField>
    <fullName>BreakfastPerDiemAllowance__c</fullName>
    <description>PacPoint-AC121019 - Created for DCCA Travel Approval phase 1</description>
    <formula>BreakfastTotal__c  *  BreakfastDollarAmountPerMeal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Breakfast Per Diem Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>