force-app/main/default/objects/TravelApproval__c/fields/BreakfastTotal__c.field-meta.xml
<CustomField>
    <fullName>BreakfastTotal__c</fullName>
    <description>PacPoint-AC121019 - Created for DCCA Travel Approval phase 1</description>
    <inlineHelpText>Number of meals. Travel beginning before 8am. 8% of per diem.</inlineHelpText>
    <label>Breakfast Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>