force-app/main/default/objects/TravelApproval__c/fields/Business_Only_Departure_Date_FORMULA__c.field-meta.xml
<CustomField>
    <fullName>Business_Only_Departure_Date_FORMULA__c</fullName>
    <formula>IF(MONTH(DATEVALUE(BusinessOnlyDepartureDate__c)) &lt; 10, &quot;0&quot;, &quot;&quot;) + TEXT(MONTH(DATEVALUE(BusinessOnlyDepartureDate__c))) + &quot;/&quot; +
IF(DAY(DATEVALUE(BusinessOnlyDepartureDate__c)) &lt; 10, &quot;0&quot;, &quot;&quot;) + TEXT(DAY(DATEVALUE(BusinessOnlyDepartureDate__c))) + &quot;/&quot; +
RIGHT(TEXT(YEAR(DATEVALUE(BusinessOnlyDepartureDate__c))), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Only Departure Date</label>
    <type>Text</type>
</CustomField>