force-app/main/default/objects/TravelApproval__c/fields/Business_Only_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Only_Return_Date__c</fullName>
    <formula>IF(MONTH(DATEVALUE(BusinessOnlyReturnDate__c )) &lt; 10, &quot;0&quot;, &quot;&quot;) + TEXT(MONTH(DATEVALUE(BusinessOnlyReturnDate__c ))) + &quot;/&quot; +
IF(DAY(DATEVALUE(BusinessOnlyReturnDate__c )) &lt; 10, &quot;0&quot;, &quot;&quot;) + TEXT(DAY(DATEVALUE(BusinessOnlyReturnDate__c ))) + &quot;/&quot; +
RIGHT(TEXT(YEAR(DATEVALUE(BusinessOnlyReturnDate__c ))), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Only Return Date</label>
    <type>Text</type>
</CustomField>