force-app/main/default/objects/TravelApproval__c/fields/Business_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Return_Date__c</fullName>
    <label>Business Return Date</label>
    <type>Date</type>
</CustomField>