force-app/main/default/objects/TravelApproval__c/fields/BusinessOnlyDepartureDate__c.field-meta.xml
<CustomField>
    <fullName>BusinessOnlyDepartureDate__c</fullName>
    <description>PacPoint-AC120919 - Created for DCCA Travel Approval phase 1</description>
    <inlineHelpText>Authorized date of departure from home island.</inlineHelpText>
    <label>Business Only Departure Date</label>
    <type>DateTime</type>
</CustomField>