force-app/main/default/objects/TravelApproval__c/fields/BusinessOnlyReturnDate__c.field-meta.xml
<CustomField>
    <fullName>BusinessOnlyReturnDate__c</fullName>
    <description>PacPoint-AC120919 - Created for DCCA Travel Approval phase 1</description>
    <inlineHelpText>Authorized date of return to home island.</inlineHelpText>
    <label>Business Only Return Date</label>
    <type>DateTime</type>
</CustomField>