force-app/main/default/objects/TravelApproval__c/fields/BusinessOnlyReturnDateNoTime__c.field-meta.xml
<CustomField>
    <fullName>BusinessOnlyReturnDateNoTime__c</fullName>
    <description>PacPoint-KN10222020-Created for Travel Approval</description>
    <formula>DateValue(BusinessOnlyReturnDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Only Return Date (No Time)</label>
    <type>Date</type>
</CustomField>