force-app/main/default/objects/TravelApproval__c/fields/CheckNumber__c.field-meta.xml
<CustomField>
    <fullName>CheckNumber__c</fullName>
    <description>PacPoint-AC121119 - Created for DCCA Travel Approval phase 1</description>
    <label>Check Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>