force-app/main/default/objects/TravelApproval__c/fields/ContactPerson__c.field-meta.xml
<CustomField>
    <fullName>ContactPerson__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <label>Contact Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>