force-app/main/default/objects/TravelApproval__c/fields/ContactPersonEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactPersonEmail__c</fullName>
    <description>PacPoint-CaBe02052024</description>
    <label>Contact Person Email</label>
    <type>Email</type>
</CustomField>