force-app/main/default/objects/TravelApproval__c/fields/ContactPersonFax__c.field-meta.xml
<CustomField>
    <fullName>ContactPersonFax__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <label>Contact Person Fax</label>
    <type>Phone</type>
</CustomField>