force-app/main/default/objects/TravelApproval__c/fields/ContactPersonPhone__c.field-meta.xml
<CustomField>
    <fullName>ContactPersonPhone__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <label>Contact Person Phone</label>
    <type>Phone</type>
</CustomField>