force-app/main/default/objects/TravelApproval__c/fields/DailyExcessLodging1SOCT__c.field-meta.xml
<CustomField>
    <fullName>DailyExcessLodging1SOCT__c</fullName>
    <description>PacPoint-AC122920 - Created for DCCA Travel Approval</description>
    <formula>DailyRoomRate1__c -  LessDailyAllowance1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Excess Lodging 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>