force-app/main/default/objects/TravelApproval__c/fields/DailyExcessLodging2SOCT__c.field-meta.xml
<CustomField>
    <fullName>DailyExcessLodging2SOCT__c</fullName>
    <description>PacPoint-AC122920 - Created for DCCA Travel Approval</description>
    <formula>DailyRoomRate2__c -  LessDailyAllowance2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Excess Lodging 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>