force-app/main/default/objects/TravelApproval__c/fields/DailyExcessLodging3__c.field-meta.xml
<CustomField>
    <fullName>DailyExcessLodging3__c</fullName>
    <description>PacPoint-AC121019 - Created for DCCA Travel Approval phase 1</description>
    <label>Daily Excess Lodging 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>