force-app/main/default/objects/TravelApproval__c/fields/DailyExcessLodging3SOCT__c.field-meta.xml
<CustomField>
    <fullName>DailyExcessLodging3SOCT__c</fullName>
    <description>PacPoint-AC122920 - Created for DCCA Travel Approval</description>
    <formula>DailyRoomRate3__c -  LessDailyAllowance3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Excess Lodging 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>