force-app/main/default/objects/TravelApproval__c/fields/DailyRoomRate3__c.field-meta.xml
<CustomField>
    <fullName>DailyRoomRate3__c</fullName>
    <description>PacPoint-AC121019 - Created for DCCA Travel Approval phase 1</description>
    <inlineHelpText>Dollar amount per night - include taxes and all fees. Do not include parking or other miscellaneous charges. (DO NOT COMPLETE IF NOT CLAIMING EXCESS LODGING)</inlineHelpText>
    <label>Room Rate 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>