force-app/main/default/objects/TravelApproval__c/fields/DateandTimeTravelBegins__c.field-meta.xml
<CustomField>
    <fullName>DateandTimeTravelBegins__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <inlineHelpText>Indicate time employee needs to be at the destintation, including any preconference meetings, etc.</inlineHelpText>
    <label>Date &amp; Time Event Begins</label>
    <type>DateTime</type>
</CustomField>