force-app/main/default/objects/TravelApproval__c/fields/DateandTimeTravelEnds__c.field-meta.xml
<CustomField>
    <fullName>DateandTimeTravelEnds__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <label>Date &amp; Time Event Ends</label>
    <type>DateTime</type>
</CustomField>