force-app/main/default/objects/TravelApproval__c/fields/DateAPD__c.field-meta.xml
<CustomField>
    <fullName>DateAPD__c</fullName>
    <description>PacPoint-AC041620 - Created for DCCA Travel Approval phase 1</description>
    <inlineHelpText>MM/DD/YYYY</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>