force-app/main/default/objects/TravelApproval__c/fields/DateTravelerSignedSOCT__c.field-meta.xml
<CustomField>
    <fullName>DateTravelerSignedSOCT__c</fullName>
    <description>PacPoint-AC121119 - Created for DCCA Travel Approval phase 1

Created for the statement of completed travel detail.</description>
    <inlineHelpText>MM/DD/YYYY</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>