force-app/main/default/objects/TravelApproval__c/fields/DepartmentDivisionOffice__c.field-meta.xml
<CustomField>
    <fullName>DepartmentDivisionOffice__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <label>Department/Division/Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>BREG</fullName>
            </value>
            <value>
                <fullName>CATV</fullName>
            </value>
            <value>
                <fullName>DCA</fullName>
            </value>
            <value>
                <fullName>DFI</fullName>
            </value>
            <value>
                <fullName>DO</fullName>
            </value>
            <value>
                <fullName>FISCAL</fullName>
            </value>
            <value>
                <fullName>INS</fullName>
            </value>
            <value>
                <fullName>ISCO</fullName>
            </value>
            <value>
                <fullName>OAH</fullName>
            </value>
            <value>
                <fullName>OCP</fullName>
            </value>
            <value>
                <fullName>PUC</fullName>
            </value>
            <value>
                <fullName>PVL</fullName>
            </value>
            <value>
                <fullName>RICO</fullName>
            </value>
            <value>
                <fullName>OFF SRVC</fullName>
                <isActive>false</isActive>
                <label>OFF SRVC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>