force-app/main/default/objects/TravelApproval__c/fields/DepartureDateTime__c.field-meta.xml
<CustomField>
    <fullName>DepartureDateTime__c</fullName>
    <description>PacPoint-AC121019 - Created for DCCA Travel Approval phase 1</description>
    <inlineHelpText>This field is updated from the Business Only Departure Date in the Travel Information Section.</inlineHelpText>
    <label>Departure Date/Time</label>
    <type>DateTime</type>
</CustomField>