force-app/main/default/objects/TravelApproval__c/fields/Dept_Day_OCONUS__c.field-meta.xml
<CustomField>
    <fullName>Dept_Day_OCONUS__c</fullName>
    <inlineHelpText>Reference Time / Dept. Date chart in Worksheet B-OCONUS</inlineHelpText>
    <label>Dept. Day OCONUS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1.00</fullName>
            </value>
            <value>
                <fullName>0.75</fullName>
            </value>
            <value>
                <fullName>0.50</fullName>
            </value>
            <value>
                <fullName>0.25</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>