force-app/main/default/objects/TravelApproval__c/fields/DescriptionMemo__c.field-meta.xml
<CustomField>
    <fullName>DescriptionMemo__c</fullName>
    <description>PacPoint-AC121219 - Created for DCCA Travel Approval phase 1</description>
    <inlineHelpText>Reason for Travel (Name of Conference/Meeting) 
Destination
State Authorized Travel Dates</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>