force-app/main/default/objects/TravelApproval__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <description>PacPoint DN 09212021 - Created for Travel case 16807</description>
    <label>Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>