force-app/main/default/objects/TravelApproval__c/fields/Dinner_Days__c.field-meta.xml
<CustomField>
    <fullName>Dinner_Days__c</fullName>
    <inlineHelpText>Number of Dinner days.</inlineHelpText>
    <label>Dinner Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>