force-app/main/default/objects/TravelApproval__c/fields/Dinner_Rate__c.field-meta.xml
<CustomField>
    <fullName>Dinner_Rate__c</fullName>
    <inlineHelpText>Dinner rate from CONUS M&amp;IE</inlineHelpText>
    <label>Dinner Rate Free Lodging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>