force-app/main/default/objects/TravelApproval__c/fields/Dinner_RateDEDUCT__c.field-meta.xml
<CustomField>
    <fullName>Dinner_RateDEDUCT__c</fullName>
    <inlineHelpText>Dinner rate from CONUS M&amp;IE.</inlineHelpText>
    <label>Dinner Rate to Deduct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>