force-app/main/default/objects/TravelApproval__c/fields/Dinner_Total_to_be_provided__c.field-meta.xml
<CustomField>
    <fullName>Dinner_Total_to_be_provided__c</fullName>
    <formula>Dinner_Days__c *  Dinner_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dinner Total Free Lodging</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>