force-app/main/default/objects/TravelApproval__c/fields/Dinner_Total_to_DEDUCT__c.field-meta.xml
<CustomField>
    <fullName>Dinner_Total_to_DEDUCT__c</fullName>
    <formula>Dinner_Rate_OCONUS__c  *  No_of_Days_DEDUCT_Dinner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dinner Meals to deduct when meals provided at no cost</inlineHelpText>
    <label>Dinner Total to DEDUCT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>