force-app/main/default/objects/TravelApproval__c/fields/Dinner_Total_When_Lodging_is_Provided__c.field-meta.xml
<CustomField>
    <fullName>Dinner_Total_When_Lodging_is_Provided__c</fullName>
    <formula>Dinner_Rate_OCONUS__c *  of_Days_Dinner_When_Lodging_is_Provi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dinner Amount When Lodging is Provided</inlineHelpText>
    <label>Dinner Total When Lodging is Provided</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>