force-app/main/default/objects/TravelApproval__c/fields/Dinner_TotalDEDUCT__c.field-meta.xml
<CustomField>
    <fullName>Dinner_TotalDEDUCT__c</fullName>
    <formula>Dinner_RateDEDUCT__c *  Dinner_DaysDEDUCT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Dinner Meals Amount to deduct.</inlineHelpText>
    <label>Dinner Total to Deduct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>